// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/TableData Base 1`] = `
<TableData
  data={
    Array [
      Object {
        "description": "A Lorem ipsum dolor sit amet.",
        "id": "a",
        "value": "1",
      },
      Object {
        "description": "B Lorem ipsum dolor sit amet.",
        "id": "b",
        "value": "2",
      },
      Object {
        "description": "C Lorem ipsum dolor sit amet.",
        "id": "c",
        "value": "3",
      },
    ]
  }
  getUniqKey={[Function]}
  header={
    Array [
      <td
        className="font-weight-bold"
      >
        ID
      </td>,
      <td
        className="font-weight-bold"
      >
        DESCRIPTION
      </td>,
      <td
        className="font-weight-bold"
      >
        VALUE
      </td>,
    ]
  }
  renderRow={[Function]}
>
  <table
    className="root-0-3-310"
  >
    <thead
      className="thead-0-3-311"
    >
      <tr>
        <td
          className="font-weight-bold"
          key="0"
        >
          ID
        </td>
        <td
          className="font-weight-bold"
          key="1"
        >
          DESCRIPTION
        </td>
        <td
          className="font-weight-bold"
          key="2"
        >
          VALUE
        </td>
      </tr>
    </thead>
    <tbody
      className="tbody-0-3-312"
    >
      <tr
        key="a"
      >
        <td>
          a
        </td>
        <td>
          A Lorem ipsum dolor sit amet.
        </td>
        <td>
          1
        </td>
      </tr>
      <tr
        key="b"
      >
        <td>
          b
        </td>
        <td>
          B Lorem ipsum dolor sit amet.
        </td>
        <td>
          2
        </td>
      </tr>
      <tr
        key="c"
      >
        <td>
          c
        </td>
        <td>
          C Lorem ipsum dolor sit amet.
        </td>
        <td>
          3
        </td>
      </tr>
    </tbody>
  </table>
</TableData>
`;

exports[`Storyshots Components/TableData isRowSelected 1`] = `
<TableData
  data={
    Array [
      Object {
        "description": "A Lorem ipsum dolor sit amet.",
        "id": "a",
        "value": "1",
      },
      Object {
        "description": "B Lorem ipsum dolor sit amet.",
        "id": "b",
        "value": "2",
      },
      Object {
        "description": "C Lorem ipsum dolor sit amet.",
        "id": "c",
        "value": "3",
      },
    ]
  }
  getUniqKey={[Function]}
  header={
    Array [
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        ID
      </td>,
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        DESCRIPTION
      </td>,
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        VALUE
      </td>,
    ]
  }
  isRowSelected={[Function]}
  renderRow={[Function]}
>
  <table
    className="root-0-3-310"
  >
    <thead
      className="thead-0-3-311"
    >
      <tr>
        <td
          key="0"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          ID
        </td>
        <td
          key="1"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          DESCRIPTION
        </td>
        <td
          key="2"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          VALUE
        </td>
      </tr>
    </thead>
    <tbody
      className="tbody-0-3-312"
    >
      <tr
        key="a"
      >
        <Row
          description="A Lorem ipsum dolor sit amet."
          id="a"
          value="1"
        >
          <td>
            a
          </td>
          <td>
            A Lorem ipsum dolor sit amet.
          </td>
          <td>
            1
          </td>
        </Row>
      </tr>
      <tr
        key="b"
        style={
          Object {
            "backgroundColor": "#81d4fa",
          }
        }
      >
        <Row
          description="B Lorem ipsum dolor sit amet."
          id="b"
          value="2"
        >
          <td>
            b
          </td>
          <td>
            B Lorem ipsum dolor sit amet.
          </td>
          <td>
            2
          </td>
        </Row>
      </tr>
      <tr
        key="c"
      >
        <Row
          description="C Lorem ipsum dolor sit amet."
          id="c"
          value="3"
        >
          <td>
            c
          </td>
          <td>
            C Lorem ipsum dolor sit amet.
          </td>
          <td>
            3
          </td>
        </Row>
      </tr>
    </tbody>
  </table>
</TableData>
`;

exports[`Storyshots Components/TableData onRowSelect 1`] = `
<TableData
  data={
    Array [
      Object {
        "description": "A Lorem ipsum dolor sit amet.",
        "id": "a",
        "value": "1",
      },
      Object {
        "description": "B Lorem ipsum dolor sit amet.",
        "id": "b",
        "value": "2",
      },
      Object {
        "description": "C Lorem ipsum dolor sit amet.",
        "id": "c",
        "value": "3",
      },
    ]
  }
  getUniqKey={[Function]}
  header={
    Array [
      <td
        className="font-weight-bold"
      >
        ID
      </td>,
      <td
        className="font-weight-bold"
      >
        DESCRIPTION
      </td>,
      <td
        className="font-weight-bold"
      >
        VALUE
      </td>,
    ]
  }
  onRowSelect={[Function]}
  renderRow={[Function]}
>
  <table
    className="root-0-3-310"
  >
    <thead
      className="thead-0-3-311"
    >
      <tr>
        <td
          className="font-weight-bold"
          key="0"
        >
          ID
        </td>
        <td
          className="font-weight-bold"
          key="1"
        >
          DESCRIPTION
        </td>
        <td
          className="font-weight-bold"
          key="2"
        >
          VALUE
        </td>
      </tr>
    </thead>
    <tbody
      className="tbody-0-3-312"
    >
      <tr
        key="a"
        onClick={[Function]}
      >
        <Row
          description="A Lorem ipsum dolor sit amet."
          id="a"
          value="1"
        >
          <td>
            a
          </td>
          <td>
            A Lorem ipsum dolor sit amet.
          </td>
          <td>
            1
          </td>
        </Row>
      </tr>
      <tr
        key="b"
        onClick={[Function]}
      >
        <Row
          description="B Lorem ipsum dolor sit amet."
          id="b"
          value="2"
        >
          <td>
            b
          </td>
          <td>
            B Lorem ipsum dolor sit amet.
          </td>
          <td>
            2
          </td>
        </Row>
      </tr>
      <tr
        key="c"
        onClick={[Function]}
      >
        <Row
          description="C Lorem ipsum dolor sit amet."
          id="c"
          value="3"
        >
          <td>
            c
          </td>
          <td>
            C Lorem ipsum dolor sit amet.
          </td>
          <td>
            3
          </td>
        </Row>
      </tr>
    </tbody>
  </table>
</TableData>
`;

exports[`Storyshots Components/TableData setRowClassName 1`] = `
<TableData
  data={
    Array [
      Object {
        "description": "A Lorem ipsum dolor sit amet.",
        "id": "a",
        "value": "1",
      },
      Object {
        "description": "B Lorem ipsum dolor sit amet.",
        "id": "b",
        "value": "2",
      },
      Object {
        "description": "C Lorem ipsum dolor sit amet.",
        "id": "c",
        "value": "3",
      },
    ]
  }
  getUniqKey={[Function]}
  header={
    Array [
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        ID
      </td>,
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        DESCRIPTION
      </td>,
      <td
        style={
          Object {
            "fontWeight": "bold",
          }
        }
      >
        VALUE
      </td>,
    ]
  }
  renderRow={[Function]}
  setRowClassName={[Function]}
>
  <table
    className="root-0-3-310"
  >
    <thead
      className="thead-0-3-311"
    >
      <tr>
        <td
          key="0"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          ID
        </td>
        <td
          key="1"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          DESCRIPTION
        </td>
        <td
          key="2"
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          VALUE
        </td>
      </tr>
    </thead>
    <tbody
      className="tbody-0-3-312"
    >
      <tr
        className=""
        key="a"
      >
        <Row
          description="A Lorem ipsum dolor sit amet."
          id="a"
          value="1"
        >
          <td>
            a
          </td>
          <td>
            A Lorem ipsum dolor sit amet.
          </td>
          <td>
            1
          </td>
        </Row>
      </tr>
      <tr
        className="font-weight-bold"
        key="b"
      >
        <Row
          description="B Lorem ipsum dolor sit amet."
          id="b"
          value="2"
        >
          <td>
            b
          </td>
          <td>
            B Lorem ipsum dolor sit amet.
          </td>
          <td>
            2
          </td>
        </Row>
      </tr>
      <tr
        className=""
        key="c"
      >
        <Row
          description="C Lorem ipsum dolor sit amet."
          id="c"
          value="3"
        >
          <td>
            c
          </td>
          <td>
            C Lorem ipsum dolor sit amet.
          </td>
          <td>
            3
          </td>
        </Row>
      </tr>
    </tbody>
  </table>
</TableData>
`;
